@startuml
'https://plantuml.com/class-diagram
interface UserService
interface UserMapper

UserService  <|.. UserServiceImpl
UserMapper <-- UserServiceImpl
UserService <-- UserController

entity User{
Integer userId
String username
String password
...
}
class UserController {
UserService userService
login()
logout()
getMenuList()
getPerson()
getTeachersBySchoolId()
}
class UserServiceImpl{
UserMapper userMapper
PermissionMapper permissionMapper
ChooseCourseMapper chooseCourseMapper
User getUserByUsername()
List<Map<String, Object>> getMenuList()
Map<String, Object> lookPerson()
List<User> getStudentListByCourseId()
List<User> getAllTeachersBySchoolId()
List<Map<String, Object>> getStudentsGradeByCourseId()
}


@enduml